--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
             'sustainability': {
                 title: "Vendor Sustainability Assessment Portal",
                 tag: "Sustainability / Workflow",
-                ctaText: "View Demo", // Updated CTA Text
+                // --- ctaText: "View Demo", --- // Updated CTA Text
                 link: "#", 
                 fullContent: `
                     <div class="meta-grid">
@@ -1339,6 +1339,7 @@
     </script>
 </body>
 </html>F
+
 
 
 
