--- a/index.html
+++ b/index.html
@@ -657,9 +657,17 @@
                         <h3 class="text-white font-bold text-lg">UX Designer</h3>
                         <span class="text-sm text-gray-500 font-mono">2022 – Present</span>
                     </div>
-                    <p class="text-blue-400 text-sm font-medium mb-2">Tata Consultancy Services (TCS)</p>
-                    <p class="text-gray-400 text-sm">Leading design for GenAI initiatives. Improved output refinement workflows and established core design patterns for banking clients.</p>
-                </div>
+<p class="text-blue-400 text-sm font-medium mb-2">
+    Tata Consultancy Services (TCS)
+</p>
+
+<ul class="text-gray-400 text-sm list-disc list-inside space-y-1">
+    <li>Designed scalable UX and UI solutions for enterprise applications.</li>
+    <li>Translated complex requirements into intuitive user flows and interfaces.</li>
+    <li>Worked cross-functionally in Agile teams to deliver user-centric products.</li>
+</ul>
+</div>
+
                 <!-- Role 2 -->
                 <div class="relative">
                     <div class="absolute -left-[29px] top-1 w-4 h-4 rounded-full bg-gray-600 border-4 border-gray-800"></div>
@@ -668,7 +676,7 @@
                         <span class="text-sm text-gray-500 font-mono">2021</span>
                     </div>
                     <p class="text-gray-500 text-sm font-medium mb-2">Greeniiac</p>
-                    <p class="text-gray-400 text-sm">Visualized concepts and created illustrations for digital campaigns.</p>
+                    <p class="text-gray-400 text-sm">Visualized concepts and created illustrations for digital magazines.</p>
                 </div>
             </div>
         </div>
@@ -1339,6 +1347,7 @@
     </script>
 </body>
 </html>F
+
 
 
 
