--- a/index.html
+++ b/index.html
@@ -701,15 +701,15 @@
                     </div>
                 </div>
                 <!-- ... other testimonials ... -->
-                <div id="t-2" class="testimonial-slide flex flex-col justify-center h-full">
+                <!-- ... <div id="t-2" class="testimonial-slide flex flex-col justify-center h-full">
                     <blockquote class="text-gray-400 italic text-base md:text-lg leading-relaxed mb-6">
                         "The design system Surya built unified our fragmented products. He thinks in systems, not just screens."
                     </blockquote>
                     <div class="flex items-center gap-3">
-                        <div class="w-8 h-8 rounded-full bg-gray-800 flex items-center justify-center text-xs font-bold text-white shrink-0">DC</div>
+                        <div class="w-8 h-8 rounded-full bg-gray-800 flex items-center justify-center text-xs font-bold text-white shrink-0">AB</div>
                         <div>
-                            <div class="text-white font-semibold text-sm">David Chen</div>
-                            <div class="text-blue-400 text-xs">Engineering Lead</div>
+                            <div class="text-white font-semibold text-sm">Anirban Bhattacharya</div>
+                            <div class="text-blue-400 text-xs">Manager</div>
                         </div>
                     </div>
                 </div>
@@ -724,7 +724,7 @@
                             <div class="text-blue-400 text-xs">Client, Banking</div>
                         </div>
                     </div>
-                </div>
+                </div> ... -->
             </div>
             <div class="flex gap-2 mt-4 z-10 relative">
                 <button onclick="showTestimonial(1)" class="w-2 h-2 rounded-full dot-active transition-opacity" id="dot-1"></button>
@@ -1347,6 +1347,7 @@
     </script>
 </body>
 </html>F
+
 
 
 
