--- a/index.html
+++ b/index.html
@@ -899,8 +899,8 @@
             'sustainability': {
                 title: "Vendor Sustainability Assessment Portal",
                 tag: "Sustainability / Workflow",
-                ctaText: "View Demo", // Updated CTA Text
-                link: "#", 
+                //ctaText: "View Demo", // Updated CTA Text
+                //link: "#", 
                 fullContent: `
                     <div class="meta-grid">
                         <div><span class="meta-label">Role</span><div class="meta-value">Lead UX Designer</div></div>
@@ -1462,3 +1462,4 @@
     </script>
 </body>
 </html>
+
