--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
         /* Image Placeholder in Modal */
         .img-placeholder {
             width: 100%;
-            height: 16rem; /* h-64 */
+            min-height: 12rem; /* Changed from fixed height to min-height */
+            height: auto;      /* Allow it to grow with the image */
             background-color: var(--modal-placeholder-bg);
             border: 1px dashed var(--modal-placeholder-border);
             border-radius: 0.75rem; /* rounded-xl */
@@ -315,6 +316,8 @@
             margin-top: 1rem;
             transition: all 0.3s ease;
             cursor: zoom-in; /* Indicate interactivity */
+            overflow: hidden; /* Prevent overlap */
+            padding: 2px; /* Small padding for inner content */
         }
         .img-placeholder:hover {
             border-color: var(--text-secondary);
@@ -328,6 +331,13 @@
         .img-placeholder span {
             font-size: 0.875rem;
             font-weight: 500;
+        }
+        /* Ensure images inside placeholder fit perfectly */
+        .img-placeholder img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 0.5rem;
+            display: block;
         }
 
         /* Lightbox Overlay */
@@ -899,8 +909,8 @@
             'sustainability': {
                 title: "Vendor Sustainability Assessment Portal",
                 tag: "Sustainability / Workflow",
-                //ctaText: "View Demo", // Updated CTA Text
-                //link: "#", 
+                ctaText: null, // Disabled as requested
+                link: "#", 
                 fullContent: `
                     <div class="meta-grid">
                         <div><span class="meta-label">Role</span><div class="meta-value">Lead UX Designer</div></div>
@@ -968,7 +978,6 @@
                     <p>This shifted the user’s role from <strong>answering</strong> to <strong>validating</strong>.</p>
 
                     <!-- SNAP PLACEHOLDER 2 -->
-                    
 					<div class="img-placeholder">
                         <img
                             src="assets/Document-Extraction-&-Review.png"
@@ -1020,7 +1029,7 @@
                     <h2>Learnings</h2>
                     <p>UX impact doesn’t always come from visual redesign. Workflow and effort reduction matter more in mandatory systems. AI delivers value when paired with clear user control.</p>
                 `,
-                link: null // Will use custom link logic below if desired, currently null to hide external unless we want to show a dummy link
+                link: null 
             },
             'genai': {
                 title: "Generative AI Design Tool",
@@ -1462,4 +1471,3 @@
     </script>
 </body>
 </html>
-
