--- a/index.html
+++ b/index.html
@@ -489,9 +489,15 @@
                     <a href="https://www.linkedin.com/in/suryatejashankapally/" target="_blank" class="btn-secondary px-6 py-2.5 rounded-full font-semibold flex items-center gap-2">
                         <i class="fa-brands fa-linkedin"></i> LinkedIn
                     </a>
-                    <a href="#" class="btn-secondary px-4 py-2.5 rounded-full font-semibold" title="Download Resume">
-                        <i class="fa-solid fa-file-arrow-down"></i>
-                    </a>
+                    <a href="assets/resume/Surya_Teja_Resume.pdf" 
+						class="btn-secondary px-4 py-2.5 rounded-full font-semibold" 
+						title="Download Resume"
+						target="_blank"
+						download>
+						<i class="fa-solid fa-file-arrow-down"></i>
+						Resume
+					</a>
+
                 </div>
             </div>
         </div>
@@ -1471,3 +1477,4 @@
     </script>
 </body>
 </html>
+
